turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:44: error: expected class or object definition
def paint(c:Color){
^Turmite:51: error: expected start of definition
	override def run() { 
                 ^Turmite:66: error: Unmatched closing brace '}' ignored here
}
^